kustomize/vote/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vote
  namespace: instavote
  labels:
    app: vote
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: vote.example.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: vote
              port:
                number: 80
